--- a/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/ViewManipulateModel/ViewManipulateModelForm.cshtml
+++ b/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/ViewManipulateModel/ViewManipulateModelForm.cshtml
@@ -67,7 +67,7 @@
                     success: function (obj) {
                         if (obj.Tag == 1) {
                             $("#form").setWebControls(obj.Result);
-                            $("#viewFunctionId").ysComboBox('setValue', obj.Result.ViewFunctionId);
+                            //$("#viewFunctionId").ysComboBox('setValue', obj.Result.ViewFunctionId);
                         }
                     }
                 });
