--- a/Caist.Framework/Caist.Framework.Web/Areas/AlarmManage/Views/AlarmPlan/AlarmPlanForm.cshtml
+++ b/Caist.Framework/Caist.Framework.Web/Areas/AlarmManage/Views/AlarmPlan/AlarmPlanForm.cshtml
@@ -38,8 +38,7 @@
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label ">
-                <span>缩略图</span><br />
-                <span>(宽高比 1.5：1)</span>
+                <span>路线图</span><br />
             </label>
             <div class="col-sm-10">
                 <div id="thumbImage" class="img-box">
@@ -47,7 +46,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label ">预案文件</label>
+            <label class="col-sm-2 control-label ">应急预案文件</label>
             <div class="col-sm-10">
                 <a onclick="addFiles();">添加文件</a><input style="display:none;" type="file" name="alarmFile" id="alarmFile" />
                 <div id="files" class="img-box">
@@ -119,6 +118,7 @@
     }
 
     var global_files = new Array();
+    var global_size = 60 * 1024 * 1024;
     function saveForm(index) {
         if ($("#form").validate().form()) {
             var postData = $("#form").getWebControls({ Id: id });
@@ -251,21 +251,32 @@
         var inputFile = document.getElementById("alarmFile");
         var formdata = new FormData();
         var file = inputFile.files[0];
-        global_fileName = file.name;
-        formdata.append("file", file);
-        ys.ajaxUploadFile({
-            url: '@GlobalContext.SystemConfig.ApiSite' + '/File/UploadFile?fileModule=@UploadFileType.Model.ParseToInt()',
-            data: formdata,
-            success: function (obj) {
-                if (obj.Tag == 1) {
-                    addArray(obj.Result);
-                    buildFileList();
+        if (judgeFile(file)) {
+            global_fileName = file.name;
+            formdata.append("file", file);
+            ys.ajaxUploadFile({
+                url: '@GlobalContext.SystemConfig.ApiSite' + '/File/UploadFile?fileModule=@UploadFileType.Model.ParseToInt()',
+                data: formdata,
+                success: function (obj) {
+                    if (obj.Tag == 1) {
+                        addArray(obj.Result);
+                        buildFileList();
+                    }
+                    else {
+                        ys.msgError(obj.Message);
+                    }
                 }
-                else {
-                    ys.msgError(obj.Message);
-                }
-            }
-        })
+            })
+        }
+    }
+
+    function judgeFile(file) {
+        var flag = true;
+        if (file.size > global_size) {
+            flag = false;
+            ys.msgError("上传文件过大,请选择小于60M的文件！");
+        }
+        return flag;
     }
 
     function uploadThumbImage(file, callback) {
