--- a/Caist.Framework/Caist.Framework.Web/Areas/PepolePosition/Views/Pepole/Index.cshtml
+++ b/Caist.Framework/Caist.Framework.Web/Areas/PepolePosition/Views/Pepole/Index.cshtml
@@ -122,7 +122,7 @@
         var datas = res.Result;
         if (datas != null && datas.length > 0) {
             for (var i = 0; i < datas.length; i++) {
-                position_global.push(datas[i].CurrentStation);
+                position_global.push(datas[i].CurrentStation);//CurrentStation
             }
         }
     }
