--- a/Caist.Framework/Caist.Framework.Web/Areas/PointManage/Views/Instruct/InstructIndex.cshtml
+++ b/Caist.Framework/Caist.Framework.Web/Areas/PointManage/Views/Instruct/InstructIndex.cshtml
@@ -67,7 +67,8 @@
                         }
                     }
                 },
-                { field: 'Remark', title: '描述' }
+                { field: 'Remark', title: '描述' },
+                { field: 'GroupName', title: '寄存标识' }
             ],
             queryParams: function (params) {
                 var pagination = $('#gridTable').ysTable('getPagination', params);
