--- a/Caist.Framework/Caist.Framework.Web/Areas/PointManage/Views/InstructGroup/InstructGroupIndex.cshtml
+++ b/Caist.Framework/Caist.Framework.Web/Areas/PointManage/Views/InstructGroup/InstructGroupIndex.cshtml
@@ -45,7 +45,8 @@
                 { field: 'ModularType', title: '寄存器名称' },
                 { field: 'ReadCount', title: '字节数' },
                 { field: 'BeginAddress', title: '存器起始地址' },
-                { field: 'BeginBlock', title: 'DB块地址' }
+                { field: 'BeginBlock', title: 'DB块地址' },
+                { field: 'GroupName', title: '寄存标识' }
             ],
             queryParams: function (params) {
                 var pagination = $('#gridTable').ysTable('getPagination', params);
