--- a/Caist.Framework/Caist.Framework.Web/Areas/PumpSystemManage/Views/Shuibeng/Index.cshtml
+++ b/Caist.Framework/Caist.Framework.Web/Areas/PumpSystemManage/Views/Shuibeng/Index.cshtml
@@ -84,7 +84,7 @@
                 {
                     type: 'category',
                     boundaryGap: false,
-                    //data: ['04/21', '04/22', '04/23', '04/24', '04/25', '04/26', '04/27']
+                    data: ['05/21', '05/22', '05/23', '05/24', '05/25', '05/26', '05/27', '05/28', '05/29', '05/30', '05/31']
                 }
             ],
             yAxis: [
