--- a/Caist.Framework/Caist.Framework.Web/Areas/AlarmManage/Views/AlarmPlan/AlarmPlanForm.cshtml
+++ b/Caist.Framework/Caist.Framework.Web/Areas/AlarmManage/Views/AlarmPlan/AlarmPlanForm.cshtml
@@ -8,55 +8,58 @@
     @BundlerHelper.Render(HostingEnvironment.ContentRootPath, Url.Content("~/lib/imageupload/1.0/js/imgup.min.js"))
 }
 
-<div class="wrapper animated fadeInRight">
-    <form id="form" class="form-horizontal m">
-        <div class="form-group">
-            <label class="col-sm-2 control-label ">预警名称 <font class="red"> *</font> </label>
-            <div class="col-sm-4">
-                <input id="alarmName" col="AlarmName" type="text" class="form-control" />
-            </div>
-            <label class="col-sm-2 control-label ">是否启用</label>
-            <div class="col-sm-4">
-                <div id="enable" col="Enable" class="col-sm-8"></div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label ">所属系统<font class="red"> *</font></label>
-            <div class="col-sm-4">
-                <div id="sysId" col="SysId"></div>
-            </div>
-            <label class="col-sm-2 control-label ">报警内容<font class="red"> *</font></label>
-            <div class="col-sm-4">
-                <div id="alarmField" col="AlarmField"></div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label ">备注</label>
-            <div class="col-sm-10">
-                <input id="remark" col="Remark" type="text" class="form-control" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label ">
-                <span>路线图</span><br />
-            </label>
-            <div class="col-sm-10">
-                <div id="thumbImage" class="img-box">
+    <div class="wrapper animated fadeInRight">
+        <form id="form" class="form-horizontal m">
+            <div class="form-group">
+                <label class="col-sm-2 control-label ">预警名称 <font class="red"> *</font> </label>
+                <div class="col-sm-4">
+                    <input id="alarmName" col="AlarmName" type="text" class="form-control" />
+                </div>
+                <label class="col-sm-2 control-label ">是否启用</label>
+                <div class="col-sm-4">
+                    <div id="enable" col="Enable" class="col-sm-8"></div>
                 </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label ">应急预案文件</label>
-            <div class="col-sm-10">
-                <a onclick="addFiles();">添加文件</a><input style="display:none;" type="file" name="alarmFile" id="alarmFile" />
-                <div id="files" class="img-box">
+            <div class="form-group">
+                <label class="col-sm-2 control-label ">所属系统<font class="red"> *</font></label>
+                <div class="col-sm-4">
+                    <div id="sysId" col="SysId"></div>
+                </div>
+                <label class="col-sm-2 control-label ">报警内容<font class="red"> *</font></label>
+                <div class="col-sm-4">
+                    <div id="alarmField" col="AlarmField"></div>
                 </div>
             </div>
-        </div>
-    </form>
-</div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label ">备注</label>
+                <div class="col-sm-10">
+                    <input id="remark" col="Remark" type="text" class="form-control" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label ">
+                    <span>路线图</span><br />
+                </label>
+                <div class="col-sm-10">
+                    <div id="thumbImage" class="img-box">
+                    </div>
+                </div>
+            </div>
+        </form>
+        <form method="post" enctype="multipart/form-data" action="/File/PostUploadAsync">
+            <div class="form-group">
+                <label class="col-sm-2 control-label ">应急预案文件</label>
+                <div class="col-sm-10">
+                    @*<input type="submit" id="btnSubmit" value="添加文件" />*@
+                    <a onclick="addFiles();">添加文件</a><input style="display:none;" type="file" name="alarmFile" id="alarmFile" />
+                    <div id="files" class="img-box">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 
-<script type="text/javascript">
+    <script type="text/javascript">
     var id = ys.request("id");
     var sysId = ys.request("sysId");
     $(function () {
@@ -285,10 +288,10 @@
 
     function judgeFile(file) {
         var flag = true;
-        if (file.size > global_size) {
-            flag = false;
-            ys.msgError("上传文件过大,请选择小于60M的文件！");
-        }
+        //if (file.size > global_size) {
+        //    flag = false;
+        //    ys.msgError("上传文件过大,请选择小于60M的文件！");
+        //}
         return flag;
     }
 
@@ -311,5 +314,5 @@
             }
         })
     }
-</script>
+    </script>
 
