--- a/Caist.Framework/Caist.Framework.Web/Areas/DrainagesystemManage/Views/Jushan/Index.cshtml
+++ b/Caist.Framework/Caist.Framework.Web/Areas/DrainagesystemManage/Views/Jushan/Index.cshtml
@@ -84,7 +84,7 @@
                 {
                     type: 'category',
                     boundaryGap: false,
-                    //data: ['周一', '周二', '周三', '周四', '周五', '周六', '周日']
+                    data: ['05/21', '05/22', '05/23', '05/24', '05/25', '05/26', '05/27', '05/28', '05/29', '05/30', '05/31']
                 }
             ],
             yAxis: [
