--- a/Caist.Framework/Caist.Framework.Web/wwwroot/yisha/css/style.css
+++ b/Caist.Framework/Caist.Framework.Web/wwwroot/yisha/css/style.css
@@ -6870,7 +6870,10 @@ body.rtls .top-navigation .footer.fixed, body.rtls.top-navigation .footer.fixed 
 }
 /* ECHARTS  */
 .echarts {
-    height: 240px;
+    /*min-height: 100vh;
+    height: auto !important;
+    overflow: hidden;*/
+    height:234px
 }
 
 .checkbox-inline, .radio-inline, .checkbox-inline + .checkbox-inline, .radio-inline + .radio-inline {
