--- a/Web/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/ViewParamenter/ViewParamenterForm.cshtml
+++ b/Web/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/ViewParamenter/ViewParamenterForm.cshtml
@@ -45,11 +45,9 @@
             <div class="col-sm-4">
                 <select class="form-control select2" id="paramenterValueType" col="ParamenterValueType">
                     <option value="">--请选择类型--</option>
-                    <option value="SHORT">SHORT</option>
-                    <option value="UINT32">UINT32</option>
-                    <option value="USHORT">USHORT</option>
+                    <option value="BOOL">BOOL</option>
                     <option value="INT">INT</option>
-                    <option value="FLOAT">FLOAT</option>
+                    <option value="Real">Real</option>
                 </select>
             </div>
 
