--- a/Web/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/MqTheme/MqtSettingForm.cshtml
+++ b/Web/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/MqTheme/MqtSettingForm.cshtml
@@ -70,7 +70,7 @@
         </div>
 
         <div class="form-group" id="alarmPanel" style="display:none">
-            <label class="col-sm-2 control-label">报警关联</label>
+            <label class="col-sm-2 control-label" id="ALarmPointName">点位关联</label>
             <div class="col-sm-10">
                 <div id="AlarmPoint" col="AlarmPoint"></div>
             </div>
@@ -115,6 +115,18 @@
                 value: "ManipulateModelName",
                 class: "form-control",
                 multiple: true
+            });
+
+    }
+
+     ///获取视频数据
+    function VideList(type) {
+      
+            $("#AlarmPoint").ysComboBox({
+                url: '@Url.Content("~/ApplicationManage/Video/GetListJson")',
+                key: "ChannelNumber",
+                value: "Name",
+                class: "form-control"
             });
 
     }
@@ -211,15 +223,25 @@
             }
     }
     function viewTypeVisible(value) {
+        $("#ALarmPointName").text("点位关联");
         if (value == "2") { //告警
             AlarmPoint(2);
+            $("#CodePointPanel").show();
             $("#alarmPanel").show();
         } else if (value == "3") { //控制状态
 
             AlarmPoint(1);
+            $("#CodePointPanel").show();
             $("#alarmPanel").show();
         }
+        else if (value == "4") { //视频
+            $("#CodePointPanel").hide();
+            $("#alarmPanel").show();
+            $("#ALarmPointName").text("通道ID");
+            VideList();
+        }
         else {
+            $("#CodePointPanel").show();
             $("#alarmPanel").hide();
         }
     }
