--- a/Web/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/SystemSetting/SystemSettingForm.cshtml
+++ b/Web/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/SystemSetting/SystemSettingForm.cshtml
@@ -30,8 +30,23 @@
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">是否显示到菜单</label>
-            <div class="col-sm-10" id="MenuShow" col="MenuShow"></div>
+            <div class="col-sm-4" id="MenuShow" col="MenuShow"></div>
+            <label class="col-sm-2 control-label ">设备指令<font class="red"></font></label>
+            <div class="col-sm-4">
+                <input id="deviceInstruction" col="DeviceInstruction" type="text" class="form-control" />
+            </div>
+
         </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label "></label>
+            <div class="col-sm-5">
+                
+            </div>
+            <div class="col-sm-4">
+                <label class="label">目前用于标识是否要读取设备连接状态,空不读取</label>
+            </div>
+        </div>
+       
         <div class="form-group">
             <label class="col-sm-2 control-label ">
                 <span>缩略图</span><br />
@@ -154,7 +169,6 @@
     }
 
     function uploadThumbModel(file, callback) {
-        debugger;
         var formdata = new FormData();
         formdata.append("file", file);
         ys.ajaxUploadFile({
