--- a/Web/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/Video/VideoForm.cshtml
+++ b/Web/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/Video/VideoForm.cshtml
@@ -32,8 +32,12 @@
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label ">标识值(Guid)<font class="red"> *</font></label>
-            <div class="col-sm-10">
+            <div class="col-sm-4">
                 <input id="gid" col="Gid" type="text" class="form-control" />
+            </div>
+            <label class="col-sm-2 control-label ">通道ID</label>
+            <div class="col-sm-4">
+                <input id="channelNumber" col="ChannelNumber" type="text" class="form-control" />
             </div>
         </div>
         <div class="form-group">
@@ -42,6 +46,7 @@
                 <input id="url" col="Url" type="text" class="form-control" />
             </div>
         </div>
+        
     </form>
 </div>
 
