--- a/Web/Caist.Framework/Caist.Framework.Web/Areas/InformationPublish/Views/Template/TemplateForm.cshtml
+++ b/Web/Caist.Framework/Caist.Framework.Web/Areas/InformationPublish/Views/Template/TemplateForm.cshtml
@@ -132,11 +132,20 @@
         <div class="form-group">
             <label class="col-sm-2 control-label ">模板内容  <font class="red"> *</font> </label>
             <div class="col-sm-10">
-                <textarea rows="5" id="linkContent"  col="linkContent" class="form-control"></textarea>
+                <textarea rows="5" id="linkContent" col="linkContent" class="form-control"></textarea>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label "></label>
+            <div class="col-sm-5">
+
+            </div>
+            <div class="col-sm-10">
+                <label class="label"><font class="red">除人员定位以外，符号"{{xxxxx}}" 之外的内容可自定义修改</font></label>
             </div>
         </div>
         <div class="form-group" id="control-index-input">
-            <label class="col-sm-2 control-label ">索引  <font class="red"> *</font> </label>
+            <label class="col-sm-2 control-label ">排序  <font class="red"> *</font> </label>
             <div class="col-sm-10">
                 <input id="Add" col="Add" type="text" value="1" class="form-control" />
             </div>
@@ -157,7 +166,7 @@
             }
         });
         $("#systemModels").ysComboBox({
-            url: '@Url.Content("~/ApplicationManage/SystemSetting/GetListJson")',
+            url: '@Url.Content("~/ApplicationManage/SystemSetting/GetListJson")' +"?DataType=Publish",
             key: "Id",
             value: "SystemName",
             class: "form-control",
@@ -176,7 +185,8 @@
         if ($("#systemModels_select").find("option:selected").text().indexOf("人员定位") > -1) {
             $("#pclPanel").hide();
             $("#linkContent").val("井下实时人员数量：{R}人");
-        } else {
+        }
+        else {
             $("#pclPanel").show();
             $("#linkContent").val("");
              $("#viewFunctionId").ysComboBox({
@@ -208,10 +218,18 @@
         if (unit == "null") { //处理单位为空的数据
             unit = "";
         }
-        if (linkContent!="") {
-            linkContent += ";" + content + thisTxt + ":{{" + $("#viewManipulateId_select").find("option:selected").val() + "}}" + unit;
+        linkContent = $("#linkContent").val();
+        var dict = $("#viewManipulateId_select").find("option:selected").val();
+        if ($("#systemModels_select").find("option:selected").text().indexOf("光纤") > -1
+            || $("#systemModels_select").find("option:selected").text().indexOf("供配电") > -1)
+        {
+            dict = $("#viewFunctionId_select").find("option:selected").text() + "-" + dict;
+        }
+
+        if (linkContent != "") {
+            linkContent += ";" + content + thisTxt + ":{{" + dict + "}}" + unit;
         } else {
-            linkContent = content + thisTxt + ":{{" + $("#viewManipulateId_select").find("option:selected").val() + "}}" + unit;
+            linkContent += content + thisTxt + ":{{" + dict + "}}" + unit;
         }
         $("#linkContent").val(linkContent);
     }
