--- a/Web/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/ViewManipulateModel/ViewManipulateModelForm.cshtml
+++ b/Web/Caist.Framework/Caist.Framework.Web/Areas/ApplicationManage/Views/ViewManipulateModel/ViewManipulateModelForm.cshtml
@@ -90,6 +90,7 @@
                             var defaultData = {};
                             defaultData.ManipulateModelStutas = "@StatusEnum.Yes.ParseToInt()";
                             defaultData.ManipulateModelSort = obj.Result;
+                            defaultData.ViewFunctionId = viewFunctionId;
                             $("#form").setWebControls(defaultData);
                         }
                     }
